Fix animations toggle outline being covered

--- a/sass/site/header/_animations-toggle.scss
+++ b/sass/site/header/_animations-toggle.scss
@@ -2,6 +2,7 @@
 
 $transition: 0.05s linear;
 
+z-index: 0; // Prevent outline being covered
 flex-shrink: 0; // Prevent wrapping on non-mobile screens
 font-size: 80%;
 
